--- a/app/views/drugs/_form.html.erb
+++ b/app/views/drugs/_form.html.erb
@@ -15,6 +15,12 @@
     <%= f.label :drug %><br>
     <%= f.text_field :drug %>
   </div>
+  
+  <div class="field">
+    <%= f.label :adult24HourDose %><br>
+    <%= f.number_field :adult24HourDose %>
+  </div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
