--- a/app/views/drugs/show.html.erb
+++ b/app/views/drugs/show.html.erb
@@ -5,5 +5,12 @@
   <%= @drug.drug %>
 </p>
 
+<p>
+  <strong>adult24HourDose:</strong>
+  <%= @drug.adult24HourDose %>
+</p>
+
+adult24HourDose
+
 <%= link_to 'Edit', edit_drug_path(@drug) %> |
 <%= link_to 'Back', drugs_path %>
