--- a/app/views/drug_administrations/_form.html.erb
+++ b/app/views/drug_administrations/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :quantity %><br>
-    <%= f.number_field :quantity %>
+    <%= f.text_field :quantity %>
   </div>
   <div class="field">
     <%= f.label :dt %><br>
