--- a/app/views/drug_administrations/_form.html.erb
+++ b/app/views/drug_administrations/_form.html.erb
@@ -17,7 +17,8 @@
   </div>
   <div class="field">
     <%= f.label :medication_id %><br>
-    <%= collection_select(:drug_administration, :medication_id, Medication.all, :id, :formulatedName, prompt: true) %>
+    <%= collection_select(:drug_administration, :medication_id, Medication.all.order(format: :asc, medication: :asc), :id, :formulatedName, prompt: true) %>
+    <!--<%= collection_select(:drug_administration, :medication_id, Medication.all.select(:medication).distinct, :id, :medication, prompt: true) %>-->
   </div>
   <div class="field">
     <%= f.label :quantity %><br>
