--- a/app/views/medication_drugs/_form.html.erb
+++ b/app/views/medication_drugs/_form.html.erb
@@ -27,11 +27,11 @@
   
   <div class="field">
     <%= f.label :drugMg %><br>
-    <%= f.number_field :drugMg %>
+    <%= f.text_field :drugMg %>
   </div>
   <div class="field">
     <%= f.label :drugMl %><br>
-    <%= f.number_field :drugMl %>
+    <%= f.text_field :drugMl %>
   </div>
   <div class="actions">
     <%= f.submit %>
